Articles fix (#12)
* articles-documentation done

* fix articles documentation

* add changes
